<resources>
    <string name="app_name">Earthquake Report</string>
    <string name="text_offset">Near the</string>

    <!-- Issues -->
    <string name="no_earthquakes">No earthquakes found</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- Menu -->
    <string name="menu_item_update">Update Data</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_settings_default">Default Settings</string>
    <string name="menu_settings_toast">Restored default settings</string>

    <!-- Dialog -->
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_info_title">Earthquake Info</string>
    <string name="dialog_restore_title">Do you want to restore Default Settings?</string>
    <string name="dialog_info_message">This App gets the latest earthquake information
        from all over the world.\n\nThe data is provided by USGS.</string>

    <!-- Strings for Order By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for Order By Magnitude Option -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for Order By Most Recent Option -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Earthquakes to Show -->
    <string name="settings_earthquakes_label">Earthquakes to Show</string>
    <string name="settings_earthquakes_key" translatable="false">earthquakes</string>
    <string name="settings_earthquakes_default" translatable="false">100</string>

    <!-- Earthquakes Count -->
    <string name="earthquakes_10">10</string>
    <string name="earthquakes_50">50</string>
    <string name="earthquakes_100">100</string>
    <string name="earthquakes_500">500</string>
    <string name="earthquakes_1000">1000</string>
    <string name="earthquakes_5000">5000</string>
    <string name="earthquakes_10000">10000</string>

    <!-- Strings for Minimum Magnitude Preference -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">1</string>

    <!-- Strings for Maximum Magnitude Preference -->
    <string name="settings_max_magnitude_label">Maximum Magnitude</string>
    <string name="settings_max_magnitude_key" translatable="false">max_magnitude</string>
    <string name="settings_max_magnitude_default" translatable="false">9</string>

    <!-- Magnitude Size -->
    <string name="settings_magnitude_01">1</string>
    <string name="settings_magnitude_02">2</string>
    <string name="settings_magnitude_03">3</string>
    <string name="settings_magnitude_04">4</string>
    <string name="settings_magnitude_05">5</string>
    <string name="settings_magnitude_06">6</string>
    <string name="settings_magnitude_07">7</string>
    <string name="settings_magnitude_08">8</string>
    <string name="settings_magnitude_09">9</string>
</resources>